Comments to Classes_lektion

--- a/Python/Scripts/classes_lektion.ipynb
+++ b/Python/Scripts/classes_lektion.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "cf4ae7b8",
    "metadata": {},
    "outputs": [
@@ -100,6 +100,7 @@
     }
    ],
    "source": [
+    "# Class\n",
     "class GroceryStore_v2:\n",
     "    \"\"\"A class representing a grocery store product with price, quantity, and customer satisfaction.\"\"\"\n",
     "    \n",
@@ -115,9 +116,11 @@
     "        else:\n",
     "            raise ValueError(\"Grade must be between 1 and 10.\")\n",
     "\n",
+    "# Instans\n",
     "lemons = GroceryStore_v2(price=60, quantity=100)\n",
     "lemons.customer_satisfaction(8)\n",
     "\n",
+    "# Prints\n",
     "print(type(lemons))  # <class '__main__.GroceryStore_v2'>\n",
     "print(isinstance(lemons, int))  # False\n",
     "print(isinstance(lemons, GroceryStore_v2))  # True\n",
