--- a/Python/Scripts/classes_lektion.ipynb
+++ b/Python/Scripts/classes_lektion.ipynb
@@ -113,6 +113,8 @@
     "    def customer_satisfaction(self, grade):\n",
     "        if 1 <= grade <= 10:\n",
     "            self.grade = grade\n",
+    "        else:\n",
+    "            raise ValueError(\"Grade must be between 1 and 10.\")\n",
     "\n",
     "# Instans\n",
     "lemons = GroceryStore_v2(price=60, quantity=100)\n",
