prints for Lemons

--- a/Python/Scripts/classes_lektion.ipynb
+++ b/Python/Scripts/classes_lektion.ipynb
@@ -84,7 +84,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "cf4ae7b8",
    "metadata": {},
    "outputs": [
@@ -92,6 +92,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
+      "60\n",
+      "100\n",
+      "8\n",
       "<class '__main__.GroceryStore_v2'>\n",
       "False\n",
       "True\n",
@@ -121,6 +124,10 @@
     "lemons.customer_satisfaction(8)\n",
     "\n",
     "# Prints\n",
+    "print(lemons.price)\n",
+    "print(lemons.quantity)\n",
+    "print(lemons.grade)\n",
+    "\n",
     "print(type(lemons))  # <class '__main__.GroceryStore_v2'>\n",
     "print(isinstance(lemons, int))  # False\n",
     "print(isinstance(lemons, GroceryStore_v2))  # True\n",
