--- a/Python/Scripts/03_logik.ipynb
+++ b/Python/Scripts/03_logik.ipynb
@@ -37,7 +37,9 @@
    "id": "72302b36-26ce-43a1-81d0-43fb2cb24c93",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "En Person är 23 år gammal, om hans ålder är över 18 så kan han ta Kö-kort annars säger den att man måste bli äldre."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -49,21 +51,39 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "23c7a46d-a60a-45cb-8930-f7afc52e4d6a",
    "metadata": {},
    "outputs": [],
    "source": [
-    "x = 7"
+    "x = 7\n",
+    "    "
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "c0e433fa-ec9e-4424-8b98-b24e93c36af2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Värdet är mellan 5 och 10.\n"
+     ]
+    }
+   ],
+   "source": [
+    "x = 7\n",
+    "    \n",
+    "if x > 10:\n",
+    "    print(\"Värdet är större än 10.\")\n",
+    "elif x >= 5:\n",
+    "    print(\"Värdet är mellan 5 och 10.\")\n",
+    "else:\n",
+    "    print(\"Värdet är mindre än 5.\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -89,7 +109,10 @@
    "id": "0853d4a7-152f-4414-b125-cee4d6346682",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "En bool är en underklass av int där False beter sig som värdet 0\n",
+    "och True beter sig som värdet 1."
+   ]
   },
   {
    "cell_type": "markdown",
@@ -101,10 +124,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "85699762-c937-446b-bc00-83892d5ee3d2",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 2,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "10 > 15"
    ]
@@ -115,7 +149,9 @@
    "id": "690b43b6-98db-4dd0-b6a9-22774ef603f8",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -129,10 +165,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "ec7a2f6d-e361-4062-83ae-b89b7f0d0c06",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 3,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "7 >= 7"
    ]
@@ -143,7 +190,9 @@
    "id": "a42afccf-6f18-4464-9541-448e68aa2081",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "True"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -155,10 +204,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "0f509e58-728c-434a-8615-0c6c90d715d1",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 4,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "3 != 3"
    ]
@@ -169,7 +229,9 @@
    "id": "51b5337d-924d-4a05-bfe9-6aa0c490ee85",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -181,10 +243,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "0267f9bb-d478-4df2-a48d-71aed9036f90",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "False"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "5 >= 5 and 5 > 6"
    ]
@@ -195,7 +268,9 @@
    "id": "c3546351-838f-44a7-afd7-e44766e4c780",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "False"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,10 +282,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "616d9678-75e3-42e5-8ec6-4b6fe4cf2cf5",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "5 >= 5 or 5 > 6\n"
    ]
@@ -221,7 +307,9 @@
    "id": "b927b0cd-65ff-4a9f-8187-394095bcb7c9",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "True"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -233,10 +321,21 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "92c97259-3a15-45a5-9bbd-69826dc3ab5a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "True"
+      ]
+     },
+     "execution_count": 9,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "(5 > 4 and 5 >=5) or (10 > 2 and 3 > 100)"
    ]
@@ -247,7 +346,20 @@
    "id": "67ab32af-9d7d-467d-b476-624ce6c6fc64",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Första delen: (5 > 4 and 5 >= 5)\n",
+    "5 > 4 → True\n",
+    "5 >= 5 → True\n",
+    "True and True → True\n",
+    "\n",
+    "Andra delen: (10 > 2 and 3 > 100)\n",
+    "10 > 2 → True\n",
+    "3 > 100 → False\n",
+    "True and False → False\n",
+    "\n",
+    "Hela uttrycket:\n",
+    "True or False → True"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -302,13 +414,34 @@
    "execution_count": null,
    "id": "9025daed-3349-4d06-90d9-4a39ba3e48e2",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "ename": "SyntaxError",
+     "evalue": "invalid character '→' (U+2192) (1181478886.py, line 3)",
+     "output_type": "error",
+     "traceback": [
+      "  \u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[10]\u001b[39m\u001b[32m, line 3\u001b[39m\n\u001b[31m    \u001b[39m\u001b[31mnumber < 5 → ❌ Nej, inget skrivs ut.\u001b[39m\n               ^\n\u001b[31mSyntaxError\u001b[39m\u001b[31m:\u001b[39m invalid character '→' (U+2192)\n"
+     ]
+    }
+   ],
+   "source": [
+    "Eftersom number = 8, får vi:\n",
+    "number < 5 → False Nej, inget skrivs ut.\n",
+    "number < 10 → True Skrivs ut: \"Less than 10\"\n",
+    "number < 100 → True Skrivs ut: \"Less than 100\"\n",
+    "\n",
+    "number < 5 → False\n",
+    "elif number < 10 → True Skrivs ut: \"Less than 10\"\n",
+    "Och de andra elif-satserna ignoreras, även om de är sann\n",
+    "\n",
+    "Använd flera if-satser om flera villkor kan vara sanna samtidigt och du vill utföra flera olika saker.\n",
+    "Använd if + elif + else när endast ett alternativ ska väljas."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
@@ -322,7 +455,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
