--- a/Python/Scripts/04_loopar_och_iterationer.ipynb
+++ b/Python/Scripts/04_loopar_och_iterationer.ipynb
@@ -28,11 +28,29 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "f392ddf4-4073-4b67-9f35-89d190a8ef82",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "a\n",
+      "b\n",
+      "[1, 2, 3]\n",
+      "('Python', 'R', 'C', 'Java')\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "looping_list = [0, 'a', 'b', [1, 2, 3], ('Python', 'R', 'C', 'Java'), 55]\n",
+    "\n",
+    "for item in looping_list:\n",
+    "    print(item)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -54,11 +72,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "03346143-d243-4a6b-a153-f4b42708e224",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Iteration 0: 0\n",
+      "Iteration 1: a\n",
+      "Iteration 2: b\n",
+      "Iteration 3: [1, 2, 3]\n",
+      "Iteration 4: ('Python', 'R', 'C', 'Java')\n",
+      "Iteration 5: 55\n"
+     ]
+    }
+   ],
+   "source": [
+    "looping_list = [0, 'a', 'b', [1, 2, 3], ('Python', 'R', 'C', 'Java'), 55]\n",
+    "for index, item in enumerate(looping_list):\n",
+    "    print(f\"Iteration {index}: {item}\")"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -70,11 +105,26 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "d5565df3-6359-4795-8732-873a9f895d39",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "5\n",
+      "10\n",
+      "15\n",
+      "20\n"
+     ]
+    }
+   ],
+   "source": [
+    "for number in range(0, 21, 5):\n",
+    "    print(number)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -96,11 +146,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "3ee0e9c3-b259-41f5-9f80-2a4a67cec10b",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "P\n",
+      "y\n",
+      "t\n",
+      "h\n",
+      "o\n",
+      "n\n",
+      "!\n"
+     ]
+    }
+   ],
+   "source": [
+    "for_string = 'Python!'\n",
+    "\n",
+    "for letter in for_string:\n",
+    "    print(letter)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -122,11 +191,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "64017a58-dd7b-43c8-9c95-5e1a467aebec",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "I\n",
+      "s\n",
+      " \n",
+      "A\n",
+      "w\n",
+      "e\n",
+      "s\n",
+      "o\n",
+      "m\n",
+      "e\n",
+      "!\n"
+     ]
+    }
+   ],
+   "source": [
+    "while_string = 'Is Awesome!'\n",
+    "\n",
+    "index = 0\n",
+    "\n",
+    "while index < len(while_string):\n",
+    "    print(while_string[index])\n",
+    "    index += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -138,11 +233,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "97be2566-075d-4804-9a41-5cd189bf8661",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "5\n",
+      "6\n",
+      "7\n",
+      "8\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
+   "source": [
+    "num = 1\n",
+    "\n",
+    "while num <= 10:\n",
+    "    print(num)\n",
+    "    num += 1"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -164,11 +282,27 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "id": "a8498e3e-1bb8-47ed-9a2c-6e53bd2cd0a7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "10\n",
+      "20\n",
+      "55\n"
+     ]
+    }
+   ],
+   "source": [
+    "numbers = [10, 20, 34, 46, 55]\n",
+    "\n",
+    "for num in numbers:\n",
+    "    if num % 5 == 0:\n",
+    "        print(num)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -180,10 +314,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "id": "376cc228-2d30-468a-b88c-ace60d24f2ce",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[0, 2, 4, 6, 8]\n"
+     ]
+    }
+   ],
    "source": [
     "my_list = [] \n",
     "\n",
@@ -200,7 +342,9 @@
    "id": "7952c048-d564-4611-9c1d-85a51f81a145",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "för varje variable mellan 0-9 lägg till dem i listan med en itteration av 2 så, 0, 2, 4, 6, 8"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -226,7 +370,10 @@
    "id": "b1529f0a-33a5-4658-b7c2-880ba0928c66",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "for num in range(0, 21, 5):\n",
+    "    print(num)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -238,10 +385,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "id": "9d14cc51-3be4-4679-8903-12ce50593c1a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0\n",
+      "1\n",
+      "2\n",
+      "3\n",
+      "4\n",
+      "6\n",
+      "9\n",
+      "10\n"
+     ]
+    }
+   ],
    "source": [
     "for i in range(100):\n",
     "    if i in (5, 7, 8):\n",
@@ -259,12 +421,14 @@
    "id": "bc515086-1728-4b31-bd3a-7c7b49239ff7",
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "Den printar varje nummer mellan 0-10 i en range på 100, annars säger den \"We are done!\"."
+   ]
   }
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
@@ -278,7 +442,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
