06. Klasser, Python exercises, HR Uppgiften.

--- a/Python/Scripts/06_klasser.ipynb
+++ b/Python/Scripts/06_klasser.ipynb
@@ -373,7 +373,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 6,
    "id": "d1062a2c-7c92-45e4-8d33-d428ab2537e6",
    "metadata": {},
    "outputs": [
@@ -387,7 +387,8 @@
       "Too low balance\n",
       "Withdrew 50. New balance: 100\n",
       "Withdraw amount must be positive.\n",
-      "Deposit amount must be positive.\n"
+      "Deposit amount must be positive.\n",
+      "A class to represent a bank account.\n"
      ]
     }
    ],
@@ -438,7 +439,9 @@
     "my_account.withdraw(-10)\n",
     "\n",
     "# Sätt in negativa belopp\n",
-    "my_account.deposit(-30)\n"
+    "my_account.deposit(-30)\n",
+    "\n",
+    "print(my_account.__doc__)"
    ]
   },
   {
