--- a/Python/Scripts/python_exercises_1_part_2 (1).ipynb
+++ b/Python/Scripts/python_exercises_1_part_2 (1).ipynb
@@ -29,11 +29,45 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "dffff2b7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "30\n",
+      "900\n",
+      "<class '__main__.GroceryStore'>\n",
+      "False\n",
+      "True\n",
+      "A class representing a grocery store product with price, quantity.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Class\n",
+    "class GroceryStore:\n",
+    "    \"\"\"A class representing a grocery store product with price, quantity.\"\"\"\n",
+    "\n",
+    "    def __init__(self, price, quantity):\n",
+    "        self.price = price\n",
+    "        self.quantity = quantity\n",
+    "\n",
+    "\n",
+    "# Instans\n",
+    "swedish_apples = GroceryStore(price=30, quantity=900)\n",
+    "\n",
+    "# Prints\n",
+    "print(swedish_apples.price)\n",
+    "print(swedish_apples.quantity)\n",
+    "\n",
+    "print(type(swedish_apples))  # <class '__main__.GroceryStore'>\n",
+    "print(isinstance(swedish_apples, int))  # False\n",
+    "print(isinstance(swedish_apples, GroceryStore))  # True\n",
+    "print(GroceryStore.__doc__)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -49,8 +83,28 @@
    "execution_count": null,
    "id": "028178bb",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "50\n",
+      "600\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Child class\n",
+    "class Subsidiarie(GroceryStore):\n",
+    "    pass\n",
+    "\n",
+    "# Create an instance of the child class\n",
+    "grapes = Subsidiarie(price=50, quantity=600)\n",
+    "\n",
+    "# Print attributes\n",
+    "print(grapes.price)\n",
+    "print(grapes.quantity)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -62,11 +116,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "id": "ea25ffa9",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "28\n",
+      "920\n",
+      "competitor_grocery_store\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Competitor(GroceryStore):\n",
+    "  store_name = \"competitor_grocery_store\"\n",
+    "\n",
+    "# Create an instance\n",
+    "danish_apples = Competitor(price=28, quantity=920)\n",
+    "\n",
+    "# Print instance variables\n",
+    "print(danish_apples.price)\n",
+    "print(danish_apples.quantity)\n",
+    "\n",
+    "# Print class variable\n",
+    "print(Competitor.store_name)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -86,11 +163,55 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "fe373e76",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "60\n",
+      "100\n",
+      "8\n",
+      "<class '__main__.GroceryStore_v2'>\n",
+      "False\n",
+      "True\n",
+      "A class representing a grocery store product with price, quantity, and customer satisfaction.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Class\n",
+    "class GroceryStore_v2:\n",
+    "    \"\"\"A class representing a grocery store product with price, quantity, and customer satisfaction.\"\"\"\n",
+    "    \n",
+    "    owner = \"Anna\"\n",
+    "\n",
+    "    def __init__(self, price, quantity):\n",
+    "        self.price = price\n",
+    "        self.quantity = quantity\n",
+    "\n",
+    "    def customer_satisfaction(self, grade):\n",
+    "        if 1 <= grade <= 10:\n",
+    "            self.grade = grade\n",
+    "        else:\n",
+    "            raise ValueError(\"Grade must be between 1 and 10.\")\n",
+    "\n",
+    "# Instans\n",
+    "lemons = GroceryStore_v2(price=60, quantity=100)\n",
+    "lemons.customer_satisfaction(8)\n",
+    "\n",
+    "# Prints\n",
+    "print(lemons.price)\n",
+    "print(lemons.quantity)\n",
+    "print(lemons.grade)\n",
+    "\n",
+    "print(type(lemons))  # <class '__main__.GroceryStore_v2'>\n",
+    "print(isinstance(lemons, int))  # False\n",
+    "print(isinstance(lemons, GroceryStore_v2))  # True\n",
+    "print(GroceryStore_v2.__doc__)\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -102,11 +223,43 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "id": "16cd8cd7",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Omkretsen av kvadraten är: 32\n",
+      "Arean av kvadraten är: 64\n"
+     ]
+    }
+   ],
+   "source": [
+    "class Square:\n",
+    "    def __init__(self, side_length):\n",
+    "        self.side_length = side_length  # Attributet som lagrar längden på en sida av kvadraten\n",
+    "\n",
+    "    def perimeter(self):\n",
+    "        \"\"\"Beräknar omkretsen av kvadraten.\"\"\"\n",
+    "        return 4 * self.side_length  # Omkretsen är 4 gånger sidlängden\n",
+    "\n",
+    "    def area(self):\n",
+    "        \"\"\"Beräknar arean av kvadraten.\"\"\"\n",
+    "        return self.side_length ** 2  # Arean är sidlängden upphöjd till 2 (sid_längd^2)\n",
+    "\n",
+    "# Skapa en instans av Square med sidlängden 8\n",
+    "my_square = Square(8)\n",
+    "\n",
+    "# Beräkna omkretsen och arean av my_square\n",
+    "perimeter = my_square.perimeter()\n",
+    "area = my_square.area()\n",
+    "\n",
+    "# Skriv ut resultaten\n",
+    "print(f\"Omkretsen av kvadraten är: {perimeter}\")\n",
+    "print(f\"Arean av kvadraten är: {area}\")\n"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -207,22 +360,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 8,
    "id": "f7345727",
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Sum: 105\n",
-      "Number of elements: 25\n",
-      "Mean: 4.2\n"
+     "ename": "NameError",
+     "evalue": "name 'my_data' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[31m---------------------------------------------------------------------------\u001b[39m",
+      "\u001b[31mNameError\u001b[39m                                 Traceback (most recent call last)",
+      "\u001b[36mCell\u001b[39m\u001b[36m \u001b[39m\u001b[32mIn[8]\u001b[39m\u001b[32m, line 1\u001b[39m\n\u001b[32m----> \u001b[39m\u001b[32m1\u001b[39m \u001b[43mmy_data\u001b[49m.print_summary()\n",
+      "\u001b[31mNameError\u001b[39m: name 'my_data' is not defined"
      ]
     }
    ],
    "source": [
     "my_data.print_summary()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87b8bbcf",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "Variabeln L är en lista med tal.\n",
+    "En instans av DescriptiveStatistics skapas och sparas i variabeln my_data.\n",
+    "Metoden add_data anropas med listan L som argument, vilket lägger till alla värden i L till my_data.data.\n",
+    "De olika metoderna anropas för att beräkna och skriva ut statistiken (summa, antal element och medelvärde)."
    ]
   },
   {
@@ -264,7 +432,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
@@ -278,7 +446,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.18"
+   "version": "3.12.9"
   }
  },
  "nbformat": 4,
