--- a/Python/Scripts/HR_Data_Task.ipynb
+++ b/Python/Scripts/HR_Data_Task.ipynb
@@ -405,7 +405,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "id": "a026ace5",
    "metadata": {},
    "outputs": [
@@ -744,7 +744,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python",
+   "display_name": "Python 3",
    "language": "python",
    "name": "python3"
   },
