--- a/Python/Scripts/Script_Skola_Plugins/03_Pandas.ipynb
+++ b/Python/Scripts/Script_Skola_Plugins/03_Pandas.ipynb
@@ -823,7 +823,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
