Skol uppgift v.21 och Mattebot till Streamlit

--- a/Python/Scripts/Script_Skola_Plugins/01_NumPy.ipynb
+++ b/Python/Scripts/Script_Skola_Plugins/01_NumPy.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 4,
    "id": "1f79e4a6",
    "metadata": {},
    "outputs": [],
@@ -36,7 +36,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 5,
    "id": "7b3678cd",
    "metadata": {},
    "outputs": [],
@@ -46,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 15,
    "id": "31d39235",
    "metadata": {},
    "outputs": [
@@ -89,7 +89,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 17,
    "id": "a7053fbb",
    "metadata": {},
    "outputs": [
@@ -118,7 +118,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 20,
    "id": "3cd794ae",
    "metadata": {},
    "outputs": [
@@ -140,6 +140,11 @@
       "[[-1.  0.  1.]\n",
       " [ 2.  3.  4.]\n",
       " [ 5.  6.  7.]]\n",
+      "\n",
+      "Elementwise Devide (B / C):\n",
+      "[[0.5 1.  1.5]\n",
+      " [2.  2.5 3. ]\n",
+      " [3.5 4.  4.5]]\n",
       "\n",
       "Elementwise Multiplication (B * C):\n",
       "[[ 2.  4.  6.]\n",
@@ -163,6 +168,11 @@
     "# Elementwise subtraction\n",
     "subtraction = B - C\n",
     "print(\"\\nElementwise Subtraction (B - C):\")\n",
+    "print(subtraction)\n",
+    "\n",
+    "# Elementwise subtraction\n",
+    "subtraction = B / C\n",
+    "print(\"\\nElementwise Devide (B / C):\")\n",
     "print(subtraction)\n",
     "\n",
     "# Elementwise multiplication\n",
@@ -519,21 +529,40 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "id": "5e6ef2e4",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[2 3 4]\n"
+     ]
+    }
+   ],
    "source": [
+    "import numpy as np\n",
     "v1 = np.array([1, 2, 3])\n",
     "print(v1 + 1)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "e2cbae26",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[1 2]\n",
+      " [3 4]]\n",
+      "[2 2]\n"
+     ]
+    }
+   ],
    "source": [
     "A = np.arange(1, 5).reshape(2,2)\n",
     "print(A)\n",
@@ -562,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": 22,
    "id": "3506f977-ac0a-473f-85bc-eec9f35dc498",
    "metadata": {},
    "outputs": [
@@ -592,7 +621,7 @@
     "        if mat1.shape != mat2.shape:\n",
     "            raise ValueError(\"For addition, matrices must have the same shape.\")\n",
     "        return mat1 + mat2\n",
-    "    \n",
+    "\n",
     "    elif operation == 'multiply':\n",
     "        # Check if shapes are conformable for matrix multiplication\n",
     "        if mat1.shape[1] != mat2.shape[0]:\n",
@@ -619,7 +648,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 21,
    "id": "89df88af-3668-4d98-a0a4-e6d92eea0f89",
    "metadata": {},
    "outputs": [
@@ -737,11 +766,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 26,
    "id": "65371610-16e1-48b2-b7fb-65e49002608a",
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "[[23 34]\n",
+      " [31 46]]\n"
+     ]
+    }
+   ],
+   "source": [
+    "print(add_mult_matrices(B, A, 'multiply'))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -816,7 +856,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": "Python",
    "language": "python",
    "name": "python3"
   },
