--- a/Python/Scripts/Script_Skola_Plugins/03_Pandas.ipynb
+++ b/Python/Scripts/Script_Skola_Plugins/03_Pandas.ipynb
@@ -736,7 +736,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": null,
    "id": "7e6a9d43",
    "metadata": {},
    "outputs": [
@@ -767,7 +767,7 @@
    ],
    "source": [
     "# Group by the 'company' column and count the number of rows for each company\n",
-    "company_counts = cars.groupby('company').size()\n",
+    "company_counts = cars.groupby('company').size().sort_values(ascending=false)\n",
     "\n",
     "# Display the result\n",
     "print(company_counts)"
