Ny DiamantAnalys Notebook o DiamondAnalys Streamlit

--- a/Python/Kundskapskontrollen/diamonds/diamonds_old/KunskapsKontrollen.ipynb
+++ b/Python/Kundskapskontrollen/diamonds/diamonds_old/KunskapsKontrollen.ipynb
@@ -20,8 +20,9 @@
     "---\n",
     "\n",
     "## Innehållsförteckning\n",
-    "\n",
-    "-- Högst upp i documentet ligger innehållsförteckning --\n",
+    "-- Inledning\n",
+    "-- Datapreparation\n",
+    "-- Innehållsförteckning --\n",
     "\n",
     "-- Analysen --\n",
     "1. Pris vs Vikt (Carat)\n",
@@ -45,7 +46,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 1,
    "id": "37b39988",
    "metadata": {},
    "outputs": [
@@ -228,7 +229,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": null,
    "id": "5e7bea7f",
    "metadata": {},
    "outputs": [
