--- a/Python/Kundskapskontrollen/Kunskapskontroll.ipynb
+++ b/Python/Kundskapskontrollen/Kunskapskontroll.ipynb
@@ -374,9 +374,15 @@
    "source": [
     "1. Det roligaste i kunskapskontrollen är analysen av Diamond och skriva kod för att visualisera den igenom python kod med olika biblotek så som NumPy, Pandas och Matplot med flera som jag har hittat och kunnat använda under kursens moment.\n",
     "\n",
-    "2. \n",
+    "2. VG : Mitt arbete möter kraven för betyget Väl Godkänt (VG).\n",
+    "Jag visar både tekniskt kunnande, analytisk förmåga, affärsförståelse och förmåga att kommunicera insikter tydligt. Jag går också bortom enbart kodning genom att resonera kring data, resultat och tillämpning i en verklig affärskontext.\n",
     "\n",
-    "3. "
+    "3. Den mest utmanande delen av arbetet har varit att hitta en balans mellan datateknisk noggrannhet och affärsmässig relevans. Det fanns ett stort antal variabler i datasetet (t.ex. carat, cut, clarity, depth, table) och det krävdes tid att avgöra vilka som hade mest affärsnytta för Guldfynds målgrupp. Att välja bort irrelevanta analyser och fokusera på insikter som verkligen kan påverka beslut var en utmaning.\n",
+    "En annan teknisk utmaning var att arbeta med diskretisering av numeriska värden (t.ex. carat, depth, table) för att göra dem mer begripliga i visualiseringar som cirkeldiagram. Det krävde förståelse för hur man använder pd.qcut() och hur man tolkar resultaten utan att förlora precision.\n",
+    "Jag hanterade dessa utmaningar genom att:\n",
+    "- Arbeta iterativt med visualiseringarna för att testa vilka som bäst kommunicerade mönster.\n",
+    "- Skriva mycket förklarande text i notebooken för att förankra mina val i analysens syfte.\n",
+    "- Läsa dokumentation och testa olika inställningar i pandas och Matplotlib för att förbättra tydligheten i presentationen."
    ]
   }
  ],
