Diamant Analys uppdateringar med Plotly och Hex_Notes v.1

--- a/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
+++ b/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
@@ -44,10 +44,18 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 47,
    "id": "187e600d",
    "metadata": {},
    "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antal borttagna rader: 76\n",
+      "Antal rader kvar: 53864\n"
+     ]
+    },
     {
      "data": {
       "text/html": [
@@ -173,7 +181,7 @@
        "5  3.96  2.48  "
       ]
      },
-     "execution_count": 1,
+     "execution_count": 47,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +195,12 @@
     "# Läs in datan och ta bort rader med saknade värden\n",
     "df = pd.read_excel('diamonds.xlsx')\n",
     "df_clean = df.dropna()\n",
-    "df_clean.head()\n"
+    "\n",
+    "antal_före = len(df)\n",
+    "antal_efter = len(df.dropna())\n",
+    "print(f\"Antal borttagna rader: {antal_före - antal_efter}\")\n",
+    "print(f\"Antal rader kvar: {antal_efter}\")\n",
+    "df_clean.head()"
    ]
   },
   {
@@ -200,22 +213,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 42,
    "id": "90dfcb36",
    "metadata": {},
    "outputs": [],
    "source": [
-    "\n",
-    "# Gruppanalyser för stapeldiagram\n",
+    "# Gruppanalyser\n",
     "avg_price_by_color = df_clean.groupby(\"color\")[\"price\"].mean().sort_index()\n",
     "avg_price_by_clarity = df_clean.groupby(\"clarity\")[\"price\"].mean().sort_index()\n",
-    "avg_price_by_cut = df_clean.groupby(\"cut\")[\"price\"].mean().sort_index()\n",
-    "price_count = df_clean[\"price\"].value_counts().sort_index()\n"
+    "avg_price_by_cut = df_clean.groupby(\"cut\")[\"price\"].mean().sort_index()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 43,
    "id": "79f679c6",
    "metadata": {},
    "outputs": [],
@@ -237,7 +248,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 11,
+   "execution_count": 48,
    "id": "3e2a2a4c",
    "metadata": {},
    "outputs": [
@@ -311,7 +322,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 13,
+   "execution_count": null,
    "id": "15ec4199",
    "metadata": {},
    "outputs": [
@@ -397,15 +408,16 @@
     "**Insikter:**\n",
     "- Prisnivån på diamanter ökar kraftigt med ökad carat-vikt, vilket tyder på att vikt är en avgörande faktor för värdet.\n",
     "- Slipkvalitet (\"cut\"), färg och klarhet påverkar priset i varierande grad. Särskilt slipkvaliteten har stark korrelation med prisnivåer.\n",
-    "- Majoriteten av diamanterna i datasetet ligger inom viktspannet 0.9–1.6 carat, vilket indikerar var efterfrågan är som störst på marknaden.\n",
+    "- Majoriteten av diamanterna i datasetet ligger inom viktspannet 0.7–1.2 carat, vilket indikerar var efterfrågan är som störst på marknaden.\n",
     "- Fördelningen av djup (depth) och bord (table) ligger också i ett tydligt mellansegment, vilket antyder industristandarder för proportioner.\n",
     "- Betydande prisskillnader förekommer även inom samma kategori (t.ex. färg eller klarhet), vilket antyder att andra faktorer som certifiering, symmetri eller marknadsläge också påverkar priset.\n",
     "\n",
     "**Rekommendationer:**\n",
-    "- Fokusera på diamanter i viktspannet 0.9–1.6 carat, då dessa är mest förekommande och sannolikt utgör kärnan i den kommersiella efterfrågan.\n",
-    "- Satsa på slipkvalitet av \"Very Good\" eller bättre för att bygga ett starkt premiumerbjudande och differentiera Guldfynds varumärke.\n",
-    "- Erbjud valmöjligheter i klarhetsgrad för att möta olika kundsegment – från prismedvetna till kvalitetsfokuserade köpare.\n",
-    "- Utred ytterligare faktorer som påverkar prisvariationer – t.ex. certifikat, ursprung eller leveranskedja – för att förbättra prisstrategin.\n",
+    "- Fokusera på diamanter mellan 0.7 – 1.2 carat, där marginalerna verkar vara bäst.\n",
+    "- Clarity VS2–SI1 och color G–H ger bäst balans mellan pris och kvalitet.\n",
+    "- Ideal och Very Good cut rekommenderas då de ofta erbjuder hög kvalitet till rimligt pris.\n",
+    "- Premium cut ger ibland högt pris utan proportionellt högre värde.\n",
+    "- Undvik mycket stora diamanter (>2 carat) i första skedet – dessa är få och dyra.\n",
     "\n",
     "Denna analys ger ett datadrivet underlag för produkturval, sortimentstrategi och prissättning vid en eventuell expansion till diamantförsäljning."
    ]
