diamantAnalys if colums has 0 remove

--- a/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
+++ b/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
@@ -47,7 +47,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": null,
    "id": "187e600d",
    "metadata": {},
    "outputs": [
@@ -198,6 +198,8 @@
     "# Läs in datan och ta bort rader med saknade värden\n",
     "df = pd.read_excel('diamonds.xlsx')\n",
     "df_clean = df.dropna()\n",
+    "cols_to_check = ['carat', 'price', 'x', 'y', 'z'] \n",
+    "df_clean = df_clean[(df_clean[cols_to_check] != 0).all(axis=1)]\n",
     "\n",
     "antal_före = len(df)\n",
     "antal_efter = len(df.dropna())\n",
