Tar bort 0 värden från Streamlit och Note

--- a/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
+++ b/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
@@ -55,8 +55,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Antal borttagna rader: 76\n",
-      "Antal rader kvar: 53864\n"
+      "Antal borttagna rader: 0\n",
+      "Antal rader kvar: 53844\n"
      ]
     },
     {
@@ -184,7 +184,7 @@
        "5  3.96  2.48  "
       ]
      },
-     "execution_count": 61,
+     "execution_count": 2,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -198,8 +198,11 @@
     "# Läs in datan och ta bort rader med saknade värden\n",
     "df = pd.read_excel('diamonds.xlsx')\n",
     "df_clean = df.dropna()\n",
-    "cols_to_check = ['carat', 'price', 'x', 'y', 'z'] \n",
-    "df_clean = df_clean[(df_clean[cols_to_check] != 0).all(axis=1)]\n",
+    "cols_to_check = ['carat', 'price', 'x', 'y', 'z']\n",
+    "cols_exist = [col for col in cols_to_check if col in df_clean.columns]\n",
+    "\n",
+    "if cols_exist:\n",
+    "    df_clean = df_clean[(df_clean[cols_exist] != 0).all(axis=1)]\n",
     "\n",
     "antal_före = len(df)\n",
     "antal_efter = len(df.dropna())\n",
