DiamantAnalys notebook ändringar

--- a/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
+++ b/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
@@ -12,17 +12,15 @@
     "\n",
     "Guldfynd är ett företag specialiserat på smycken av guld och silver. Företaget överväger att utöka sitt sortiment till att även omfatta diamanter. Som dataanalytiker på IT-avdelningen har du fått i uppdrag att analysera ett tillgängligt diamant-dataset för att identifiera insikter som kan vägleda verksamhetens investeringsbeslut.\n",
     "\n",
-    "**Syftet:**\n",
+    "Syftet:\n",
     "- Identifiera faktorer som påverkar diamantpriser.\n",
     "- Förstå fördelningen av olika diamantkvaliteter.\n",
     "- Skapa en grund för rekommendationer kring sortimentsstrategi.\n",
     "\n",
-    "---\n",
     "\n",
     "## Datapreparation\n",
     "Vi börjar med att ladda in datan, undersöka dess struktur och rensa bort saknade värden för att möjliggöra en pålitlig analys.\n",
     "\n",
-    "---\n",
     "\n",
     "## Innehållsförteckning\n",
     "- Bakgrund\n",
@@ -31,6 +29,7 @@
     "- Innehållsförteckning\n",
     "\n",
     "-- Analysen --\n",
+    "- ❓ Biblotek + Code Cleaning\n",
     "- 🔍 Gruppering\n",
     "- 🔍 Visualiseringar\n",
     "1. Pris vs Vikt (Carat)\n",
@@ -46,8 +45,16 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "id": "852f996a",
+   "metadata": {},
+   "source": [
+    "## ❓ Biblotek + Code Cleaning"
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "id": "187e600d",
    "metadata": {},
    "outputs": [
@@ -55,8 +62,8 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Antal borttagna rader: 0\n",
-      "Antal rader kvar: 53844\n"
+      "Antal borttagna rader: 76\n",
+      "Antal rader kvar: 53864\n"
      ]
     },
     {
@@ -184,7 +191,7 @@
        "5  3.96  2.48  "
       ]
      },
-     "execution_count": 2,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
