DiamantAnalys Notebook cut_mapping

--- a/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
+++ b/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
@@ -18,15 +18,11 @@
     "- Skapa en grund för rekommendationer kring sortimentsstrategi.\n",
     "\n",
     "\n",
-    "## Datapreparation\n",
-    "Vi börjar med att ladda in datan, undersöka dess struktur och rensa bort saknade värden för att möjliggöra en pålitlig analys.\n",
-    "\n",
-    "\n",
     "## Innehållsförteckning\n",
     "- Bakgrund\n",
     "- Syftet\n",
-    "- Datapreparation\n",
     "- Innehållsförteckning\n",
+    "- Datapreparation\n",
     "\n",
     "-- Analysen --\n",
     "- ❓ Biblotek + Code Cleaning\n",
@@ -46,6 +42,15 @@
   },
   {
    "cell_type": "markdown",
+   "id": "3ff93439",
+   "metadata": {},
+   "source": [
+    "## Datapreparation\n",
+    "Vi börjar med att ladda in datan, undersöka dess struktur och rensa bort saknade värden för att möjliggöra en pålitlig analys."
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "852f996a",
    "metadata": {},
    "source": [
@@ -54,7 +59,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 4,
    "id": "187e600d",
    "metadata": {},
    "outputs": [
@@ -191,7 +196,7 @@
        "5  3.96  2.48  "
       ]
      },
-     "execution_count": 3,
+     "execution_count": 4,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -228,20 +233,51 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": null,
    "id": "90dfcb36",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "0        Excellent\n",
+       "1        Very Good\n",
+       "2             Fair\n",
+       "3              NaN\n",
+       "4             Fair\n",
+       "           ...    \n",
+       "53935    Excellent\n",
+       "53936         Fair\n",
+       "53937         Good\n",
+       "53938    Very Good\n",
+       "53939    Excellent\n",
+       "Name: cut, Length: 53940, dtype: object"
+      ]
+     },
+     "execution_count": 5,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
     "# Gruppanalyser\n",
     "avg_price_by_color = df_clean.groupby(\"color\")[\"price\"].mean().sort_index()\n",
     "avg_price_by_clarity = df_clean.groupby(\"clarity\")[\"price\"].mean().sort_index()\n",
-    "avg_price_by_cut = df_clean.groupby(\"cut\")[\"price\"].mean().sort_index()\n"
+    "avg_price_by_cut = df_clean.groupby(\"cut\")[\"price\"].mean().sort_index()\n",
+    "cut_mapping = {\n",
+    "        \"Ideal\": \"Excellent\",\n",
+    "        \"Premium\": \"Very Good\",\n",
+    "        \"Very Good\": \"Good\",\n",
+    "        \"Good\": \"Fair\",\n",
+    "        \"Fair\": \"Poor\"\n",
+    "    }\n",
+    "df[\"cut_gia\"] = df[\"cut\"].map(cut_mapping)\n",
+    "avg_price_by_cut_gia = df_clean.groupby(\"cut_gia\")[\"price\"].mean().sort_index()\n"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 63,
+   "execution_count": 6,
    "id": "79f679c6",
    "metadata": {},
    "outputs": [],
@@ -271,7 +307,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 67,
+   "execution_count": null,
    "id": "3e2a2a4c",
    "metadata": {},
    "outputs": [
@@ -317,7 +353,7 @@
     "axs[0, 2].set_xlabel(\"Klarhet\")\n",
     "axs[0, 2].set_ylabel(\"Pris\")\n",
     "\n",
-    "axs[1, 0].bar(avg_price_by_cut.index, avg_price_by_cut.values, color=\"gold\")\n",
+    "axs[1, 0].bar(avg_price_by_cut_gia.index, avg_price_by_cut_gia.values, color=\"gold\")\n",
     "axs[1, 0].set_title(\"Pris per Slipkvalitet (Cut)\")\n",
     "axs[1, 0].set_xlabel(\"Cut\")\n",
     "axs[1, 0].set_ylabel(\"Pris\")\n",
