--- a/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
+++ b/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
@@ -63,145 +63,7 @@
    "execution_count": null,
    "id": "187e600d",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Antal borttagna rader: 76\n",
-      "Antal rader kvar: 53864\n"
-     ]
-    },
-    {
-     "data": {
-      "text/html": [
-       "<div>\n",
-       "<style scoped>\n",
-       "    .dataframe tbody tr th:only-of-type {\n",
-       "        vertical-align: middle;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe tbody tr th {\n",
-       "        vertical-align: top;\n",
-       "    }\n",
-       "\n",
-       "    .dataframe thead th {\n",
-       "        text-align: right;\n",
-       "    }\n",
-       "</style>\n",
-       "<table border=\"1\" class=\"dataframe\">\n",
-       "  <thead>\n",
-       "    <tr style=\"text-align: right;\">\n",
-       "      <th></th>\n",
-       "      <th>Unnamed: 0</th>\n",
-       "      <th>carat</th>\n",
-       "      <th>cut</th>\n",
-       "      <th>color</th>\n",
-       "      <th>clarity</th>\n",
-       "      <th>depth</th>\n",
-       "      <th>table</th>\n",
-       "      <th>price</th>\n",
-       "      <th>x</th>\n",
-       "      <th>y</th>\n",
-       "      <th>z</th>\n",
-       "    </tr>\n",
-       "  </thead>\n",
-       "  <tbody>\n",
-       "    <tr>\n",
-       "      <th>0</th>\n",
-       "      <td>1</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>Ideal</td>\n",
-       "      <td>E</td>\n",
-       "      <td>SI2</td>\n",
-       "      <td>61.5</td>\n",
-       "      <td>55.0</td>\n",
-       "      <td>326.0</td>\n",
-       "      <td>3.95</td>\n",
-       "      <td>3.98</td>\n",
-       "      <td>2.43</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>1</th>\n",
-       "      <td>2</td>\n",
-       "      <td>0.21</td>\n",
-       "      <td>Premium</td>\n",
-       "      <td>E</td>\n",
-       "      <td>SI1</td>\n",
-       "      <td>59.8</td>\n",
-       "      <td>61.0</td>\n",
-       "      <td>326.0</td>\n",
-       "      <td>3.89</td>\n",
-       "      <td>3.84</td>\n",
-       "      <td>2.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>2</th>\n",
-       "      <td>3</td>\n",
-       "      <td>0.23</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>E</td>\n",
-       "      <td>VS1</td>\n",
-       "      <td>56.9</td>\n",
-       "      <td>65.0</td>\n",
-       "      <td>327.0</td>\n",
-       "      <td>4.05</td>\n",
-       "      <td>4.07</td>\n",
-       "      <td>2.31</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>4</th>\n",
-       "      <td>5</td>\n",
-       "      <td>0.31</td>\n",
-       "      <td>Good</td>\n",
-       "      <td>J</td>\n",
-       "      <td>SI2</td>\n",
-       "      <td>63.3</td>\n",
-       "      <td>58.0</td>\n",
-       "      <td>335.0</td>\n",
-       "      <td>4.34</td>\n",
-       "      <td>4.35</td>\n",
-       "      <td>2.75</td>\n",
-       "    </tr>\n",
-       "    <tr>\n",
-       "      <th>5</th>\n",
-       "      <td>6</td>\n",
-       "      <td>0.24</td>\n",
-       "      <td>Very Good</td>\n",
-       "      <td>J</td>\n",
-       "      <td>VVS2</td>\n",
-       "      <td>62.8</td>\n",
-       "      <td>57.0</td>\n",
-       "      <td>336.0</td>\n",
-       "      <td>3.94</td>\n",
-       "      <td>3.96</td>\n",
-       "      <td>2.48</td>\n",
-       "    </tr>\n",
-       "  </tbody>\n",
-       "</table>\n",
-       "</div>"
-      ],
-      "text/plain": [
-       "   Unnamed: 0  carat        cut color clarity  depth  table  price     x  \\\n",
-       "0           1   0.23      Ideal     E     SI2   61.5   55.0  326.0  3.95   \n",
-       "1           2   0.21    Premium     E     SI1   59.8   61.0  326.0  3.89   \n",
-       "2           3   0.23       Good     E     VS1   56.9   65.0  327.0  4.05   \n",
-       "4           5   0.31       Good     J     SI2   63.3   58.0  335.0  4.34   \n",
-       "5           6   0.24  Very Good     J    VVS2   62.8   57.0  336.0  3.94   \n",
-       "\n",
-       "      y     z  \n",
-       "0  3.98  2.43  \n",
-       "1  3.84  2.31  \n",
-       "2  4.07  2.31  \n",
-       "4  4.35  2.75  \n",
-       "5  3.96  2.48  "
-      ]
-     },
-     "execution_count": 13,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
+   "outputs": [],
    "source": [
     "\n",
     "import pandas as pd\n",
@@ -220,7 +82,7 @@
     "    df_clean = df_clean[(df_clean[cols_exist] != 0).all(axis=1)]\n",
     "\n",
     "antal_före = len(df)\n",
-    "antal_efter = len(df.dropna())\n",
+    "antal_efter = len(df_clean)\n",
     "print(f\"Antal borttagna rader: {antal_före - antal_efter}\")\n",
     "print(f\"Antal rader kvar: {antal_efter}\")\n",
     "df_clean.head()"
