Flera kalkuleringar för Depth-Avvikelser, Läng-Bredd, Nollvärden (om dropna glömt)

--- a/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
+++ b/Python/Kundskapskontrollen/diamonds/diamantanalys.ipynb
@@ -60,31 +60,215 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "id": "187e600d",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Antal borttagna rader: 176\n",
+      "Antal rader kvar: 53764\n",
+      "\n",
+      "Detaljerad borttagningslogg:\n",
+      "- >1% avvikelse i depth: 100 rader borttagna\n",
+      "- L/B-förhållande utanför 0.9–1.1: 0 rader borttagna\n",
+      "- Nollvärden i fysiska mått: 0 rader borttagna\n"
+     ]
+    },
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>Unnamed: 0</th>\n",
+       "      <th>carat</th>\n",
+       "      <th>cut</th>\n",
+       "      <th>color</th>\n",
+       "      <th>clarity</th>\n",
+       "      <th>depth</th>\n",
+       "      <th>table</th>\n",
+       "      <th>price</th>\n",
+       "      <th>x</th>\n",
+       "      <th>y</th>\n",
+       "      <th>z</th>\n",
+       "      <th>depth_calc</th>\n",
+       "      <th>depth_diff</th>\n",
+       "      <th>längd_bredd_kvot</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>1</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>Ideal</td>\n",
+       "      <td>E</td>\n",
+       "      <td>SI2</td>\n",
+       "      <td>61.5</td>\n",
+       "      <td>55.0</td>\n",
+       "      <td>326.0</td>\n",
+       "      <td>3.95</td>\n",
+       "      <td>3.98</td>\n",
+       "      <td>2.43</td>\n",
+       "      <td>61.286255</td>\n",
+       "      <td>0.213745</td>\n",
+       "      <td>0.992462</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>1</th>\n",
+       "      <td>2</td>\n",
+       "      <td>0.21</td>\n",
+       "      <td>Premium</td>\n",
+       "      <td>E</td>\n",
+       "      <td>SI1</td>\n",
+       "      <td>59.8</td>\n",
+       "      <td>61.0</td>\n",
+       "      <td>326.0</td>\n",
+       "      <td>3.89</td>\n",
+       "      <td>3.84</td>\n",
+       "      <td>2.31</td>\n",
+       "      <td>59.767141</td>\n",
+       "      <td>0.032859</td>\n",
+       "      <td>1.013021</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>2</th>\n",
+       "      <td>3</td>\n",
+       "      <td>0.23</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>E</td>\n",
+       "      <td>VS1</td>\n",
+       "      <td>56.9</td>\n",
+       "      <td>65.0</td>\n",
+       "      <td>327.0</td>\n",
+       "      <td>4.05</td>\n",
+       "      <td>4.07</td>\n",
+       "      <td>2.31</td>\n",
+       "      <td>56.896552</td>\n",
+       "      <td>0.003448</td>\n",
+       "      <td>0.995086</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>4</th>\n",
+       "      <td>5</td>\n",
+       "      <td>0.31</td>\n",
+       "      <td>Good</td>\n",
+       "      <td>J</td>\n",
+       "      <td>SI2</td>\n",
+       "      <td>63.3</td>\n",
+       "      <td>58.0</td>\n",
+       "      <td>335.0</td>\n",
+       "      <td>4.34</td>\n",
+       "      <td>4.35</td>\n",
+       "      <td>2.75</td>\n",
+       "      <td>63.291139</td>\n",
+       "      <td>0.008861</td>\n",
+       "      <td>0.997701</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>5</th>\n",
+       "      <td>6</td>\n",
+       "      <td>0.24</td>\n",
+       "      <td>Very Good</td>\n",
+       "      <td>J</td>\n",
+       "      <td>VVS2</td>\n",
+       "      <td>62.8</td>\n",
+       "      <td>57.0</td>\n",
+       "      <td>336.0</td>\n",
+       "      <td>3.94</td>\n",
+       "      <td>3.96</td>\n",
+       "      <td>2.48</td>\n",
+       "      <td>62.784810</td>\n",
+       "      <td>0.015190</td>\n",
+       "      <td>0.994949</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "   Unnamed: 0  carat        cut color clarity  depth  table  price     x  \\\n",
+       "0           1   0.23      Ideal     E     SI2   61.5   55.0  326.0  3.95   \n",
+       "1           2   0.21    Premium     E     SI1   59.8   61.0  326.0  3.89   \n",
+       "2           3   0.23       Good     E     VS1   56.9   65.0  327.0  4.05   \n",
+       "4           5   0.31       Good     J     SI2   63.3   58.0  335.0  4.34   \n",
+       "5           6   0.24  Very Good     J    VVS2   62.8   57.0  336.0  3.94   \n",
+       "\n",
+       "      y     z  depth_calc  depth_diff  längd_bredd_kvot  \n",
+       "0  3.98  2.43   61.286255    0.213745          0.992462  \n",
+       "1  3.84  2.31   59.767141    0.032859          1.013021  \n",
+       "2  4.07  2.31   56.896552    0.003448          0.995086  \n",
+       "4  4.35  2.75   63.291139    0.008861          0.997701  \n",
+       "5  3.96  2.48   62.784810    0.015190          0.994949  "
+      ]
+     },
+     "execution_count": 6,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
    "source": [
-    "\n",
     "import pandas as pd\n",
     "import numpy as np\n",
-    "import plotly.express as px\n",
-    "import plotly.graph_objects as go\n",
-    "from plotly.subplots import make_subplots\n",
+    "import matplotlib.pyplot as plt\n",
     "\n",
     "# Läs in datan och ta bort rader med saknade värden\n",
     "df = pd.read_excel('diamonds.xlsx')\n",
-    "df_clean = df.dropna()\n",
+    "df_clean = df.dropna().copy()\n",
+    "\n",
     "cols_to_check = ['carat', 'price', 'x', 'y', 'z']\n",
     "cols_exist = [col for col in cols_to_check if col in df_clean.columns]\n",
     "\n",
-    "if cols_exist:\n",
-    "    df_clean = df_clean[(df_clean[cols_exist] != 0).all(axis=1)]\n",
+    "removed = {}\n",
     "\n",
+    "# Depth-avvikelse\n",
+    "if all(col in df_clean.columns for col in ['x', 'y', 'z', 'depth']):\n",
+    "    df_clean['depth_calc'] = (df_clean['z'] / ((df_clean['x'] + df_clean['y']) / 2)) * 100\n",
+    "    df_clean['depth_diff'] = abs(df_clean['depth_calc'] - df_clean['depth'])\n",
+    "    before = df_clean.shape[0]\n",
+    "    df_clean = df_clean[df_clean['depth_diff'] <= 1]\n",
+    "    removed[\">1% avvikelse i depth\"] = before - df_clean.shape[0]\n",
+    "\n",
+    "# Längd–bredd-förhållande (endast om x och y finns)\n",
+    "if all(col in df_clean.columns for col in ['x', 'y']):\n",
+    "    df_clean['längd_bredd_kvot'] = df_clean['x'] / df_clean['y']\n",
+    "    before = df_clean.shape[0]\n",
+    "    df_clean = df_clean[(df_clean['längd_bredd_kvot'] >= 0.9) & (df_clean['längd_bredd_kvot'] <= 1.1)]\n",
+    "    removed['L/B-förhållande utanför 0.9–1.1'] = before - df_clean.shape[0]\n",
+    "\n",
+    "# Ta bort rader med nollor i dimensioner (x, y, z)\n",
+    "if cols_exist:\n",
+    "    before = df_clean.shape[0]\n",
+    "    df_clean = df_clean[(df_clean[cols_exist] != 0).all(axis=1)]\n",
+    "    removed['Nollvärden i fysiska mått'] = before - df_clean.shape[0]\n",
+    "\n",
+    "# Resultatsammanfattning\n",
     "antal_före = len(df)\n",
     "antal_efter = len(df_clean)\n",
     "print(f\"Antal borttagna rader: {antal_före - antal_efter}\")\n",
     "print(f\"Antal rader kvar: {antal_efter}\")\n",
+    "print(\"\\nDetaljerad borttagningslogg:\")\n",
+    "for reason, count in removed.items():\n",
+    "    print(f\"- {reason}: {count} rader borttagna\")\n",
+    "\n",
     "df_clean.head()"
    ]
   },
@@ -1244,87 +1428,51 @@
     }
    ],
    "source": [
-    "# Scatter: Pris vs Carat\n",
-    "scatter_trace = go.Scatter(\n",
-    "    x=df_clean[\"carat\"],\n",
-    "    y=df_clean[\"price\"],\n",
-    "    mode='markers',\n",
-    "    marker=dict(opacity=0.4),\n",
-    "    name=\"Pris vs Vikt\"\n",
-    ")\n",
+    "# Skapa subplot-grid: 3 rader x 3 kolumner\n",
+    "fig, axs = plt.subplots(2, 3, figsize=(20, 16))\n",
     "\n",
-    "# Pris per Färg\n",
+    "axs[0, 0].scatter(df_clean[\"carat\"], df_clean[\"price\"], alpha=0.4)\n",
+    "axs[0, 0].set_title(\"Pris vs Vikt (Carat)\")\n",
+    "axs[0, 0].set_xlabel(\"Carat\")\n",
+    "axs[0, 0].set_ylabel(\"Pris (USD)\")\n",
+    "\n",
     "color_map = {\n",
-    "    'D': '#4B9CD3', 'E': '#76B041', 'F': '#FFD700',\n",
-    "    'G': '#FF7F50', 'H': '#D87093', 'I': '#9370DB', 'J': '#A9A9A9'\n",
+    "    'D': '#4B9CD3',\n",
+    "    'E': '#76B041',\n",
+    "    'F': '#FFD700',\n",
+    "    'G': '#FF7F50',\n",
+    "    'H': '#D87093',\n",
+    "    'I': '#9370DB',\n",
+    "    'J': '#A9A9A9'\n",
     "}\n",
-    "bar_color_trace = go.Bar(\n",
-    "    x=avg_price_by_color.index,\n",
-    "    y=avg_price_by_color.values,\n",
-    "    marker_color=[color_map.get(c, \"gray\") for c in avg_price_by_color.index],\n",
-    "    name=\"Pris per Färg\"\n",
-    ")\n",
     "\n",
-    "# Pris per Klarhet\n",
-    "bar_clarity_trace = go.Bar(\n",
-    "    x=avg_price_by_clarity.index,\n",
-    "    y=avg_price_by_clarity.values,\n",
-    "    marker_color='silver',\n",
-    "    name=\"Pris per Klarhet\"\n",
-    ")\n",
+    "bar_colors = [color_map.get(color, 'gray') for color in avg_price_by_color.index]\n",
+    "axs[0, 1].bar(avg_price_by_color.index, avg_price_by_color.values, color=bar_colors)\n",
+    "axs[0, 1].set_title(\"Pris per Färg\")\n",
+    "axs[0, 1].set_xlabel(\"Färg\")\n",
+    "axs[0, 1].set_ylabel(\"Pris\")\n",
     "\n",
-    "# Pris per Slipkvalitet\n",
-    "bar_cut_trace = go.Bar(\n",
-    "    x=avg_price_by_cut_gia.index,\n",
-    "    y=avg_price_by_cut_gia.values,\n",
-    "    marker_color='gold',\n",
-    "    name=\"Pris per Cut\"\n",
-    ")\n",
+    "axs[0, 2].bar(avg_price_by_clarity.index, avg_price_by_clarity.values, color=\"silver\")\n",
+    "axs[0, 2].set_title(\"Pris per Klarhet\")\n",
+    "axs[0, 2].set_xlabel(\"Klarhet\")\n",
+    "axs[0, 2].set_ylabel(\"Pris\")\n",
     "\n",
-    "# Pie: Cut\n",
-    "pie_cut_trace = go.Pie(\n",
-    "    labels=cut_counts.index,\n",
-    "    values=cut_counts.values,\n",
-    "    name=\"Fördelning Cut\",\n",
-    "    hole=0.3\n",
-    ")\n",
+    "axs[1, 0].bar(avg_price_by_cut_gia.index, avg_price_by_cut_gia.values, color=\"gold\")\n",
+    "axs[1, 0].set_title(\"Pris per Slipkvalitet (Cut)\")\n",
+    "axs[1, 0].set_xlabel(\"Cut\")\n",
+    "axs[1, 0].set_ylabel(\"Pris\")\n",
     "\n",
-    "# Pie: Clarity\n",
-    "pie_clarity_trace = go.Pie(\n",
-    "    labels=clarity_counts.index,\n",
-    "    values=clarity_counts.values,\n",
-    "    name=\"Fördelning Clarity\",\n",
-    "    hole=0.3\n",
-    ")\n",
+    "axs[1, 1].pie(cut_counts.values, labels=cut_counts.index, autopct='%1.1f%%', startangle=90)\n",
+    "axs[1, 1].set_title(\"Fördelning: Cut\")\n",
+    "axs[1, 1].axis('equal')\n",
     "\n",
-    "# Skapa 2x3 grid\n",
-    "fig_grid = make_subplots(\n",
-    "    rows=2, cols=3,\n",
-    "    subplot_titles=[\n",
-    "        \"Pris vs Vikt (Carat)\", \"Pris per Färg\", \"Pris per Klarhet\",\n",
-    "        \"Pris per Slipkvalitet\", \"Fördelning: Cut\", \"Fördelning: Clarity\"\n",
-    "    ],\n",
-    "    specs=[[{\"type\": \"scatter\"}, {\"type\": \"bar\"}, {\"type\": \"bar\"}],\n",
-    "           [{\"type\": \"bar\"}, {\"type\": \"domain\"}, {\"type\": \"domain\"}]]\n",
-    ")\n",
+    "axs[1, 2].pie(clarity_counts.values, labels=clarity_counts.index, autopct='%1.1f%%', startangle=90)\n",
+    "axs[1, 2].set_title(\"Fördelning: Clarity\")\n",
+    "axs[1, 2].axis('equal')\n",
     "\n",
-    "# Lägg till spår i rätt ruta\n",
-    "fig_grid.add_trace(scatter_trace, row=1, col=1)\n",
-    "fig_grid.add_trace(bar_color_trace, row=1, col=2)\n",
-    "fig_grid.add_trace(bar_clarity_trace, row=1, col=3)\n",
-    "fig_grid.add_trace(bar_cut_trace, row=2, col=1)\n",
-    "fig_grid.add_trace(pie_cut_trace, row=2, col=2)\n",
-    "fig_grid.add_trace(pie_clarity_trace, row=2, col=3)\n",
-    "\n",
-    "# Anpassa layout\n",
-    "fig_grid.update_layout(\n",
-    "    height=800, width=1200,\n",
-    "    title_text=\"Diamantanalys – Visualiseringar i Grid\",\n",
-    "    template=\"plotly_dark\",\n",
-    "    showlegend=False\n",
-    ")\n",
-    "\n",
-    "fig_grid.show()\n"
+    "plt.tight_layout()\n",
+    "plt.subplots_adjust(hspace=0.4)\n",
+    "plt.show()"
    ]
   },
   {
