--- a/Python/Kundskapskontrollen/Kunskapskontroll.ipynb
+++ b/Python/Kundskapskontrollen/Kunskapskontroll.ipynb
@@ -253,7 +253,7 @@
     "# Vi kallar på funktionen o fyller i listorna med apple\n",
     "resultat = common_elemnts(\n",
     "    [4, 'apple', 10, 'hi', 3],\n",
-    "      [23, 'apple', 5, 9, 3])\n",
+    "    #   [23, 'apple', 5, 9, 3])\n",
     "print(resultat)"
    ]
   },
@@ -374,7 +374,7 @@
    "source": [
     "1. Det roligaste i kunskapskontrollen är analysen av Diamond och skriva kod för att visualisera den igenom python kod med olika biblotek så som NumPy, Pandas och Matplot med flera som jag har hittat och kunnat använda under kursens moment.\n",
     "\n",
-    "2. VG : Mitt arbete möter kraven för betyget Väl Godkänt (VG).\n",
+    "2. VG : Mitt arbete möter kraven för betyget VG.\n",
     "Jag visar både tekniskt kunnande, analytisk förmåga, affärsförståelse och förmåga att kommunicera insikter tydligt. Jag går också bortom enbart kodning genom att resonera kring data, resultat och tillämpning i en verklig affärskontext.\n",
     "\n",
     "3. Den mest utmanande delen av arbetet har varit att hitta en balans mellan datateknisk noggrannhet och affärsmässig relevans. Det fanns ett stort antal variabler i datasetet (t.ex. carat, cut, clarity, depth, table) och det krävdes tid att avgöra vilka som hade mest affärsnytta för Guldfynds målgrupp. Att välja bort irrelevanta analyser och fokusera på insikter som verkligen kan påverka beslut var en utmaning.\n",
